added new empty pages: table, art, draw and about htmls currently 4 links in the page

--- a/draw.html
+++ b/draw.html
@@ -8,16 +8,16 @@
 			<h1>All ASCII Stuff</h1>
 			
 			<ul>
-			  <li><a class="active" href="index.html">ASCII Table</a></li>
+			  <li><a href="index.html">ASCII Table</a></li>
 			  <li><a href="art.html">ASCII Art Generator</a></li>
-			  <li><a href="draw.html">ASCII FreeHand Draw</a></li>
+			  <li><a class="active" href="draw.html">ASCII FreeHand Draw</a></li>
 			  <li style="float:right"><a href="about.html">About</a></li>
 			</ul>
 	</head>
 	
 	<body>
 
-		<p id="content">table page</p>
+		<p id="content">draw page</p>
 		
 	</body>
 </html>
