--- a/art.html
+++ b/art.html
@@ -8,8 +8,8 @@
 			<h1>All ASCII Stuff</h1>
 			
 			<ul>
-			  <li><a class="active" href="index.html">ASCII Table</a></li>
-			  <li><a href="art.html">ASCII Art Generator</a></li>
+			  <li><a href="index.html">ASCII Table</a></li>
+			  <li><a class="active" href="art.html">ASCII Art Generator</a></li>
 			  <li><a href="draw.html">ASCII FreeHand Draw</a></li>
 			  <li style="float:right"><a href="about.html">About</a></li>
 			</ul>
@@ -17,7 +17,7 @@
 	
 	<body>
 
-		<p id="content">table page</p>
+		<p id="content">art page</p>
 		
 	</body>
 </html>
