--- a/about.html
+++ b/about.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script src="myScript.js"></script>
 		<link rel="stylesheet" href="style.css">
 		<title>All ASCII Stuff</title>
-		
+			
 			<h1>All ASCII Stuff</h1>
 			
-			<ul>
-			  <li><a href="index.html">ASCII Table</a></li>
-			  <li><a href="art.html">ASCII Art Generator</a></li>
-			  <li><a href="draw.html">ASCII FreeHand Draw</a></li>
-			  <li style="float:right"><a class="active" href="about.html">About</a></li>
-			</ul>
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+			<div class="topnav" id="myTopnav">
+				<a class="active duplicate" href="about.html">About</a>
+				
+				<a href="index.html">ASCII Table</a>
+				<a href="art.html">ASCII Art Generator</a>
+				<a href="draw.html">ASCII FreeHand Draw</a>
+				<a class="about active original" href="about.html">About</a>
+				
+				<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+				<i class="fa fa-bars"></i>
+				</a>
+			</div>
 	</head>
-	
+		
 	<body>
 
 		<p id="content">about page</p>
