--- a/draw.html
+++ b/draw.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script src="ASCIItable.js"></script>
 		<script src="myScript.js"></script>
 		<link rel="stylesheet" href="style.css">
 		<title>All ASCII Stuff</title>
