--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script src="resources/ASCIItable.js"></script> 
 		<script src="myScript.js"></script>
 		<link rel="stylesheet" href="style.css">
+		
 		<title>All ASCII Stuff</title>
 			
 			<h1>All ASCII Stuff</h1>
@@ -21,47 +23,8 @@
 			</div>
 	</head>
 	
-	<body>
-
-		<p id="content">table page</p>
-		
-		<table>
-		  <tr>
-			<th>Company</th>
-			<th>Contact</th>
-			<th>Country</th>
-		  </tr>
-		  <tr>
-			<td>Alfreds Futterkiste</td>
-			<td>Maria Anders</td>
-			<td>Germany</td>
-		  </tr>
-		  <tr>
-			<td>Centro comercial Moctezuma</td>
-			<td>Francisco Chang</td>
-			<td>Mexico</td>
-		  </tr>
-		  <tr>
-			<td>Ernst Handel</td>
-			<td>Roland Mendel</td>
-			<td>Austria</td>
-		  </tr>
-		  <tr>
-			<td>Island Trading</td>
-			<td>Helen Bennett</td>
-			<td>UK</td>
-		  </tr>
-		  <tr>
-			<td>Laughing Bacchus Winecellars</td>
-			<td>Yoshi Tannamuri</td>
-			<td>Canada</td>
-		  </tr>
-		  <tr>
-			<td>Magazzini Alimentari Riuniti</td>
-			<td>Giovanni Rovelli</td>
-			<td>Italy</td>
-		  </tr>
-		</table>
-		
+	<body onload="tableFromJson();">
+		<p id="showData" >sa</p>
 	</body>
+
 </html>
