Added imageToAscii.js from repo to art.html as src

--- a/art.html
+++ b/art.html
@@ -2,9 +2,12 @@
 <html lang="en">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script type="text/javascript" 
+		src="https://cdn.jsdelivr.net/gh/Ashfaaq18/imgToAscii@7930273/src/imgToAscii.js"></script>
 		<script src="myScript.js"></script>
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		
 		<title>All ASCII Stuff</title>
 			
 			<h1>All ASCII Stuff</h1>
@@ -24,7 +27,7 @@
 	</head>
 	
 	<body>
-		<script src="resources/imgToAscii.js"></script>
+		
 		<script>
 			let ele = new imgToAscii("resources/1.png");
 			ele.display();
