--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
 	<body onload="
 	tableFromJson(ASCIIcontrolData, 'showControlData');
 	tableFromJson(ASCIIprintableData, 'showPrintableData');">
-		<p id="intro"> ASCII (American Standard Code for Information Interchange) is a character encoding standard for electronic communication.
+		<p class="commonMargin"> ASCII (American Standard Code for Information Interchange) is a character encoding standard for electronic communication.
 		It was developed from telegrah codes. The code represents a 7 bit character set.</p>
-		<h2> Usage </h2>
-		<p id="intro"> For windows/linux users: <br> 
+		<h2 class="commonMargin"> Usage </h2>
+		<p class="commonMargin"> For windows/linux users: <br> 
 		Hold [ Alt + 0 + decimal value ] for the control code (holding [ Alt + decimal value ] only gives Alt codes in windows). <br>
 		Holding [ Alt + decimal value ] is enough for the printable codes.</p>
-		<p id="intro"> </p>
-		<h2> Control code ASCII </h2>
+		<h2 class="commonMargin"> Control code ASCII </h2>
 		<p id="showControlData"></p>
-		<h2> Printable code ASCII </h2>
+		<h2 class="commonMargin"> Printable code ASCII </h2>
 		<p id="showPrintableData"></p>
 	</body>
 
