add google verifcation

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="google-site-verification" content="NbkOb6OXW4SmnTaZVRHG6-bpyPiGRYf5ZMlrw_X8Vmo" />
 		<script src="resources/ASCIItable.js"></script> 
 		<script src="myScript.js"></script>
 		<link rel="stylesheet" href="style.css">
