--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 		Hold [ Alt + 0 + decimal value ] for the control code (holding [ Alt + decimal value ] only gives Alt codes in windows). <br>
 		Holding [ Alt + decimal value ] is enough for the printable codes.</p>
 		<h2 class="commonMargin"> Control code ASCII </h2>
-		<p id="showControlData"></p>
+		<div id="showControlData"></div>
 		<h2 class="commonMargin"> Printable code ASCII </h2>
-		<p id="showPrintableData"></p>
+		<div id="showPrintableData"></div>
 	</body>
 
 </html>
